# combustion-rust-ble

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
examples/: alarm_control.rs  discover_probes.rs  food_safety.rs  log_download.rs  multi_probe.rs  prediction_cooking.rs  probe_dashboard.rs  probe_debug.rs  temperature_monitor.rs
src/: device_manager.rs  error.rs  lib.rs  probe.rs  utils.rs
src/ble/: advertising.rs  characteristics.rs  connection.rs  mod.rs  scanner.rs  uuids.rs
src/data/: alarms.rs  food_safety.rs  log.rs  mod.rs  prediction.rs  preferences.rs  session.rs  temperatures.rs
src/protocol/: crc.rs  mod.rs  status.rs  uart_messages.rs
